--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -84,6 +84,9 @@ Style/CollectionMethods:
     detect: 'find'
     find_all: 'select'
 
+Style/ExplicitBlockArgument:
+  Enabled: false
+
 Style/EachWithObject:
   Enabled: false
 
